# serial_wifi_logger

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: release.yml
components/usb_host_ftdi_sio/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/usb_host_ftdi_sio/host_test/protocol_tests/: CMakeLists.txt  test_ftdi_protocol.cpp
components/usb_host_ftdi_sio/host_test/protocol_tests/esp_mock/: esp_err.h  sdkconfig.h
components/usb_host_ftdi_sio/include/esp_private/: ftdi_host_common.h
components/usb_host_ftdi_sio/include/usb/: ftdi_host_types.h  ftdi_sio_host.h  ftdi_sio_host_ops.h
components/usb_host_ftdi_sio/private_include/: ftdi_host_descriptor_parsing.h  ftdi_host_protocol.h
components/usb_host_ftdi_sio/src/: ftdi_host_descriptor_parsing.c  ftdi_host_protocol.c  ftdi_sio_host.c  ftdi_sio_host_ops.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  ota_server.c  ota_server.h  ota_ui.html  ota_web_ui.h  provisioning.c  provisioning.h  rfc2217_protocol.c  rfc2217_protocol.h  rfc2217_server.c  rfc2217_server.h  serial_control.c  serial_control.h  usb_serial_auto_main.c  version.c  version.h
script/: README.md  flash_firmware.sh  ota_update.sh
slides/: presentation.md
tools/: loopback_test.py
